# ApexSignal

./: .gitignore  Ashare.py  GEMINI.md  MACDChecker.py  MyTT.py  QWEN.md  README.md  __init__.py  app.py  bak.py  config.py  config.yaml  data_fetcher.py  data_updater.py  database_manager.py  get_stock_data.py  kdj_checker.py  macd_analysis.py  macd_checker.py  main.py  pyproject.toml  requirements.txt  rsi_checker.py  sh601818_qfq_data_with_indicators.csv  simple_macd.py  simple_macd_demo.py  stock_data_processor.py  test_ashare.py  test_indicators.py  tools.py  获取到的格式的示例.csv
api/: __init__.py  ashare_client.py  tushare_client.py
data/: __init__.py  ashare_data_fetcher.py  data_fetcher.py  data_fetcher_base.py  tushare_data_fetcher.py
database/: __init__.py  db_manager.py
templates/: index.html
tests/: test_modifications.py
utils/: __init__.py  ashare_data_processor.py  code_converter.py  indicator_calculator.py
