[project]
name = "stock-data-collector"
version = "0.1.0"
description = "A Python application to fetch, store, and analyze Chinese A-share stock market data using Tushare or Ashare APIs."
requires-python = ">=3.13"
dependencies = [
    "akshare>=1.17.41",
    "baostock>=0.8.9",
    "numpy>=1.26.4",
    "pandas-stubs==2.3.0.250703",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tushare>=1.4.23",
]
